--- a/src/pages/Destaque/Destaque.module.css
+++ b/src/pages/Destaque/Destaque.module.css
@@ -1,3 +1,9 @@
 #ct > section {
-    margin-bottom: 2em;
+   margin-bottom: 2em;
+}
+
+@media screen and (max-width: 882px) {
+   #ct {
+      padding-right: 0 !important;
+   }
 }
